Update logging, including git version at startup.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2021.3.1"
-    id "org.ajoberstar.grgit" version "4.1.0"
+    id "com.palantir.git-version" version "0.12.3"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -9,9 +9,7 @@ targetCompatibility = JavaVersion.VERSION_11
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
-def getCheckedOutGitCommitHash() {
-    grgit.head().abbreviatedId
-}
+def details = versionDetails()
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
@@ -81,5 +79,8 @@ sim {
 jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
-    classifier = getCheckedOutGitCommitHash()
+    manifest {
+        attributes 'Implementation-Version': details.branchName + "-" +
+            details.gitHash + (details.isCleanTag ? "" : "-dirty")
+    }
 }
