--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,7 @@ $RECYCLE.BIN/
 ### Gradle ###
 .gradle
 /build/
+DriveCharacterization/characterization-project/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
