Initial set of unit tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.server.launchMode": "Standard",
+  "java.test.config": [
+    {
+        "name": "WPIlibUnitTests",
+        "workingDirectory": "${workspaceFolder}/build/tmp/jniExtractDir",
+        "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/tmp/jniExtractDir" ],
+        "env": { "LD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir" ,
+                 "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/tmp/jniExtractDir" }
+    },
+  ],
+  "java.test.defaultConfig": "WPIlibUnitTests",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -13,5 +23,6 @@
     "**/.settings": true,
     "**/.factorypath": true,
     "**/*~": true
-  }
+  },
+  "wpilib.skipTests": true
 }
