Prevent unit tests from running on a build.
Instead of the unit tests being run as part of a build, they can be run
through VSCode using the JUnit test runner. And the results viewed
using it as well.

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    exclude '**/*'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
