--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
     testImplementation platform('org.junit:junit-bom:5.8.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
     compile 'org.mockito:mockito-core:3.12.4'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
