Updated command logging
Use the scheduler to log the initialization and completion of commands,
instead of individual log messages in each command.

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,8 @@ spotless {
             include '**/*.java'
             exclude '**/build/**', '**/build-*/**',
                     '**/DriveCharacterization/**',
+                    '**/ElevatorCharacterization/**',
+                    '**/HDriveCharacterization/**',
                     '**/src/main/java/frc/robot/utils/frc4048/**'
         }
         removeUnusedImports()
